<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="tab_contacts">Contacts</string>
    <string name="tab_dialing">Dialing</string>
    <string name="tab_records">Records</string>
    <string name="tab_gallery">Gallery</string>
    <string name="tab_back">Back</string>
    <string name="tab_1">1</string>
    <string name="tab_2">2</string>
    <string name="tab_3">3</string>
    <string name="tab_4">4</string>
    <string name="tab_5">5</string>
    <string name="tab_6">6</string>
    <string name="tab_7">7</string>
    <string name="tab_8">8</string>
    <string name="tab_9">9</string>
    <string name="tab_star">*</string>
    <string name="tab_0">0</string>
    <string name="tab_jing">#</string>
    <string name="tab_call">call</string>
    <string name="nothing"> </string>
    <string name="restore">Restore</string>
    <string name="update">Update</string>
    <string name="clear">Clear</string>
    <string name="empty">Empty Adapter</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="options">OPTIONS</string>
    <string name="actions">ACTIONS</string>
    <string name="restore_list">Restore list</string>
    <string name="open_expandable_list">Open expandable list</string>
    <string name="update_list">Update list</string>
    <string name="clear_list">Clear list</string>
    <string name="sticky_header">Sticky header</string>
    <string name="fade_header">Fade header</string>
    <string name="draw_behind_header">Draw behind header</string>
    <string name="fast_scroll">Fast scroll</string>
    <string name="title_activity_setting">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>



    <!-- String in the edit or add contact page only, the sample is string_edit_* -->

    <string name="string_edit_name">Name</string>
    <string name="string_edit_phone">Telephone</string>
    <string name="string_edit_relationship">Relationship</string>
    <string name="string_edit_avatar">Avatar</string>
    <string name="string_edit_pinyin">Pinyin</string>

    <string name="string_edit_ok">ok</string>


    <!--  Temp String Values-->

    <string name="tmp_edit_show">This is a textview to show the results</string>
    <string name="tmp_edit_title">Edit or Add Contact</string>







    <string name="title_activity_edit_contact_activity">Contact</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


</resources>
